@@ -502,6 +502,14 @@ module API
       expose :key, :value
     end
 
+    class Pipeline < Grape::Entity
+      expose :status, :ref, :sha, :before_sha, :tag, :yaml_errors
+
+      expose :user, with: Entities::UserBasic
+      expose :created_at, :updated_at, :started_at, :finished_at, :committed_at
+      expose :duration
+    end
+
     class Environment < Grape::Entity
       expose :id, :name, :external_url
     end
